Web Animations: Support iterator protocol in property indexed keyframe values

For element.animate() calls of the form
"element.animate({property: [a, b, c]}, timing);" we were not accepting
non-array iterables for the value list.

This patch extends support for generic iterable objects to property indexed
keyframe values.

This behaviour corresponds to step 6.3 of
http://w3c.github.io/web-animations/#process-a-keyframe-like-object
where we cast the values as a (DOMString or sequence<DOMString>) object.

BUG=645393

Review-Url: https://codereview.chromium.org/2334123002
Cr-Commit-Position: refs/heads/master@{#418507}

Former-commit-id: 3abd8209bdc0a59fda5350b4e893c1eb0a28be88